Final Ones_Organised/OPA/opa-constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sApprovedImages
metadata:
  name: approved-image-check
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    namespaces:
      - "jenkins"  # This restricts the policy to the Jenkins namespace
